<resources>
    <string name="app_name">TP2</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="zoom">Zoom +</string>
    <string name="zoom2">Zoom -</string>
    <string name="ocultar">Ocultar</string>
    <string name="reset">Reset</string>
    <string name="conversorMonedas">Conversor de monedas</string>
    <string name="seleccioneMoneda">Seleccione una moneda</string>
    <string name="convertir">Convertir</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="ingreseMontoEnPesos">Ingrese monto en pesos</string>
    <string name="resultado">Resultado</string>
    <string name="primerPantalla">Primer pantalla</string>
    <string name="segundaPantalla">Segunda pantalla</string>
    <string name="user">Ingrese su nombre</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="bienvenido">Bienvenido de nuevo</string>
    <string name="recordar">Recordar usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="sinRegistrar">Sin registrar? Crear usuario</string>
</resources>
